--- a/product/build.gradle
+++ b/product/build.gradle
@@ -24,13 +24,20 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-amqp'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.amqp:spring-rabbit-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	dependencies {
+		// Jackson 의존성
+		implementation 'com.fasterxml.jackson.core:jackson-databind'
+		implementation 'com.fasterxml.jackson.core:jackson-core'
+		implementation 'com.fasterxml.jackson.core:jackson-annotations'
+
+		implementation 'org.springframework.boot:spring-boot-starter-amqp'
+		compileOnly 'org.projectlombok:lombok'
+		annotationProcessor 'org.projectlombok:lombok'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testImplementation 'org.springframework.amqp:spring-rabbit-test'
+		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	}
+
 }
 
 tasks.named('test') {
